--- a/Projekt_PZ_Grupa1/MainWindow.xaml
+++ b/Projekt_PZ_Grupa1/MainWindow.xaml
@@ -12,7 +12,7 @@
         <Button x:Name="start" Content="Rozpocznij analize" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,70,0,0"  Width="120" Click="start_Click" Height="20"/>
         <Label x:Name="label_out" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="170,6,0,0" Height="26"/>
         <Label x:Name="label_mes" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="140,36,0,0" Height="26"/>
-        <ListBox x:Name="wyniki_out" Visibility="Visible" HorizontalAlignment="Left" Height="190" VerticalAlignment="Top" Margin="10,100,0,0" Width="750"/>
-        <TextBox x:Name="wyniki_mes" HorizontalAlignment="Left" Height="190" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="750" Margin="10,295,0,0"/>
+        <ListBox x:Name="wyniki_out" Visibility="Visible" HorizontalAlignment="Left" Height="190" VerticalAlignment="Top" Margin="10,100,0,0" Width="750" SelectionChanged="wyniki_out_SelectionChanged"/>
+        <TextBox x:Name="wyniki_mes" HorizontalAlignment="Left" Height="190" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="750" Margin="10,295,0,0"/>
     </Grid>
 </Window>
